fix: fix alignment of card content

--- a/src/components/CoreTeam/CoreTeam.css
+++ b/src/components/CoreTeam/CoreTeam.css
@@ -14,6 +14,7 @@
   --ma-cardgroup-card-border-width: 1px;
   --ma-cardgroup-card-large-padding-block-start: 0;
   --ma-cardgroup-card-large-padding-block-end: 0;
+  --ma-cardgroup-card-flex-direction: row;
 }
 
 .ma-core-team__content {
